fixed alignment issue with logo

--- a/css/style.css
+++ b/css/style.css
@@ -3903,6 +3903,7 @@ SIDE BAR ARCHIVE LIST
 	#logo a img {
 		height: 64px;
 		margin-top: 0px;
+		margin-left: -10px;
 	}
 	#jPanelMenu-menu{
 		padding:0;
